name:                twitch-cli
version:             0.1.0.0
synopsis:            CLI to watch file patterns and run commands when they change
description:         Please see README.md
homepage:            https://github.com/grafted-in/twitch-cli
license:             BSD3
license-file:        LICENSE
author:              Elliot Cameron
maintainer:          elliot@graftedin.io
copyright:           2017 Elliot Cameron and Grafted-In, LLC
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable twitch
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:
    base                  >= 4.7 && < 5,
    data-default           == 0.7.*,
    optparse-applicative  == 0.14.*,
    process               == 1.*,
    twitch                == 0.1.7.*
  default-language: Haskell2010
  ghc-options: -Wall -O2 -threaded -rtsopts

source-repository head
  type:     git
  location: https://github.com/grafted-in/twitch-cli
