name:                twitch-cli
version:             0.1.0.0
synopsis:            CLI to watch file patterns and run commands when they change
description:
  This package provides a simple command-line interface (CLI) to the excellent
  twitch library. It allows you to quickly set up complex file-watching rules and
  commands that can respond to changes.
  .
  This package is maintained by Grafted-In (<https://www.graftedin.io/>).
homepage:            https://github.com/grafted-in/twitch-cli
license:             BSD3
license-file:        LICENSE
author:              Elliot Cameron
maintainer:          elliot@graftedin.io
copyright:           2017 Elliot Cameron and Grafted-In, LLC
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  CHANGELOG.md
  README.md

executable twitch
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:
    base                  >= 4.7 && < 5,
    data-default           == 0.7.*,
    optparse-applicative  >= 0.13 && < 0.15,
    process               == 1.*,
    twitch                == 0.1.7.*
  default-language: Haskell2010
  ghc-options: -Wall -O2 -threaded -rtsopts

source-repository head
  type:     git
  location: https://github.com/grafted-in/twitch-cli
